Add export function for downloading generic_map html

--- a/test/main.html
+++ b/test/main.html
@@ -28,6 +28,7 @@
         </flexitem>
       </flex>
     </div>
+    <button style="position:absolute;top:0;right:0" class="btn btn-sm btn-dark export m-1">&darr;</button>
   </body>
 
 <script type="module">
@@ -84,6 +85,21 @@ let DRAW_EXT = {
 let MAPDIV = document.querySelector('#map');
 let MAPFUNCS = setup_generic_map(MAPDIV, DRAW_DATA, DRAW_EXT);
 window.resizex = function(event) { if (MAPFUNCS) MAPFUNCS.resize(); }
+
+// TEST DOWNLOAD **
+document.querySelector('button.export').addEventListener('click',(e) => {
+  const blob = new Blob([MAPFUNCS.export()], { type: 'text/html' });
+  const a = document.createElement('a');
+  let url = URL.createObjectURL(blob);
+  a.href = url;
+  a.download = 'export.html'; // Set a default filename
+  document.body.appendChild(a); // Temporarily append to body
+  a.click(); // Programmatically click the link
+  document.body.removeChild(a); // Remove the temporary link  
+  URL.revokeObjectURL(url); // Release the object URL
+});
+// ****************
+
 
 // TEST ARCS **********************************************************************
 let ARCPATH = new ARCS.ArcPath(false);
